# dioxus-tailwindcss

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  index.html  package.json  tailwind.config.js
.github/workflows/: build.yml  deploy.yml
macros/: Cargo.toml
macros/src/: lib.rs
public/: tailwind.css
src/: app.rs  index.css  lib.rs  main.rs  public.rs
