[package]
name = "dioxus-tailwindcss"
version = "0.1.0"
edition = "2021"
description = "Dioxus + Tailwindcss cross-platform desktop demo"

[package.metadata.bundle]

[dependencies]
dioxus = "0.3.2"
macros = { path = "macros" }

[target.'cfg(any(unix, windows))'.dependencies]
dioxus-desktop = { version = "0.3.0" }
# dioxus-tui = "0.2.2"

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = { version = "0.3.1" }

[profile.release]
# Configure release to optimize for size
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
