[package]
name = "dioxus-tailwindcss"
version = "0.1.0"
edition = "2021"
description = "Dioxus + Tailwindcss cross-platform desktop demo"

[package.metadata.bundle]

[dependencies]
macros = { path = "macros" }

base64 = "0.21.0"
include_dir = "0.7.3"
once_cell = "1.17.1"
image = "0.24.6"

dioxus = "0.3.2"
dioxus-desktop = { version = "0.3.0" }

# Configure release to optimize for size
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"